--- a/Lab_9_Geolocatio_Tutorial.html
+++ b/Lab_9_Geolocatio_Tutorial.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Geolocation and Web Storage</title>
     <script src="geolocation.js" type="text/javascript"></script>
+    <script async defer
+            src="https://maps.google.cn/maps/api/js?key=AIzaSyC98_c0u736IQgHgvr_Mo_iQ3oBHIVqknY&language=en_US&callback=initMap">
+    </script>
 
     <!--Author:   Xuheng Cheng   -->
     <!--ID:       15398078       -->
@@ -20,7 +23,6 @@ give it an id attribute so you can access it in the DOM. -->
 <!-- Place a second div element here for diplaying accuracy information. Don't forget to
 give it an id attribute so you can access it in the DOM. -->
 <div id="accuracy">
-
 </div>
 
 </body>
